Closed Bug 1625531 Opened 6 years ago Closed 6 years ago

Thunderbird Crash in [@ mozilla::EditorBase::IsSelectionRangeContainerNotContent] via mozilla::HTMLEditor::GetParagraphState

Categories

(Core :: DOM: Editor, defect, P2)

76 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla76
Tracking Status
firefox-esr68 --- unaffected
firefox74 --- unaffected
firefox75 --- unaffected
firefox76 --- fixed

People

(Reporter: wsmwk, Assigned: masayuki)

References

(Blocks 2 open bugs, Regression)

Details

(Keywords: crash, regression, Whiteboard: [tbird crash])

Crash Data

Attachments

(1 file)

Currently #3 crash for Thunderbird daily. Based on the stats, the average user crashes only once. I looked at 5 crashes and there are no common add-ons, and some have no add-ons.

The very first crash is buildid 20200310101724 bp-0188ca84-1262-4a7f-8fa1-b9e110200310.

Top 10 frames of crashing thread:

0 xul.dll mozilla::EditorBase::IsSelectionRangeContainerNotContent const editor/libeditor/EditorBase.cpp:5472
1 xul.dll mozilla::HTMLEditor::GetParagraphState editor/libeditor/HTMLEditor.cpp:1857
2 xul.dll XPTC__InvokebyIndex 
3  @0x89d307 
4 xul.dll static XPCWrappedNative::CallMethod js/xpconnect/src/XPCWrappedNative.cpp:1141
5 xul.dll XPC_WN_CallMethod js/xpconnect/src/XPCWrappedNativeJSOps.cpp:947
6 xul.dll js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:569
7 xul.dll InternalCall js/src/vm/Interpreter.cpp:632
8 xul.dll Interpret js/src/vm/Interpreter.cpp:3046
9 xul.dll js::RunScript js/src/vm/Interpreter.cpp:449

Component: General → DOM: Editor
Product: Thunderbird → Core
Summary: Crash in [@ mozilla::EditorBase::IsSelectionRangeContainerNotContent] via mozilla::HTMLEditor::GetParagraphState → Thunderbird Crash in [@ mozilla::EditorBase::IsSelectionRangeContainerNotContent] via mozilla::HTMLEditor::GetParagraphState
Whiteboard: [tbird crash]
Version: 76 → 76 Branch

I suspect this has something to do with bug 1613534, but I don't see any crashes on beta.

Assignee: nobody → masayuki
Status: NEW → ASSIGNED
Priority: -- → P2
Regressed by: 1618906
Hardware: Unspecified → All
Has Regression Range: --- → yes

The selection validation should be checked in the constructor of
ParagraphStateAtSelection because
EditorBase::IsSelectionRangeContainerNotContent() needs edit action data.

Additionally, this patch adds a test for nsIHTMLEditor.getParagraphState().

Pushed by masayuki@d-toybox.com: https://hg.mozilla.org/integration/autoland/rev/514f5fc3d977 Make `HTMLEditor::GetParagraphState()` not check selection r=m_kato
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: