Bug 1625531 - Make `HTMLEditor::GetParagraphState()` not check selection r=m_kato

The selection validation should be checked in the constructor of
`ParagraphStateAtSelection` because
`EditorBase::IsSelectionRangeContainerNotContent()` needs edit action data.

Additionally, this patch adds a test for `nsIHTMLEditor.getParagraphState()`.

Differential Revision: https://phabricator.services.mozilla.com/D69316